gaming_vm/cn231-iptables.txt
# Generated by iptables-save v1.6.1 on Tue Nov  2 18:56:59 2021
*raw
:PREROUTING ACCEPT [2761818:451351455]
:OUTPUT ACCEPT [2272446:424961458]
COMMIT
# Completed on Tue Nov  2 18:56:59 2021
# Generated by iptables-save v1.6.1 on Tue Nov  2 18:56:59 2021
*mangle
:PREROUTING ACCEPT [2908756:1017848708]
:INPUT ACCEPT [2777809:1009315050]
:FORWARD ACCEPT [100877:5971244]
:OUTPUT ACCEPT [2293178:427714852]
:POSTROUTING ACCEPT [2396276:433834669]
:LIBVIRT_PRT - [0:0]
-A POSTROUTING -j LIBVIRT_PRT
-A LIBVIRT_PRT -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Tue Nov  2 18:56:59 2021
# Generated by iptables-save v1.6.1 on Tue Nov  2 18:56:59 2021
*nat
:PREROUTING ACCEPT [168:19478]
:INPUT ACCEPT [126:15940]
:OUTPUT ACCEPT [66:4897]
:POSTROUTING ACCEPT [66:4897]
:LIBVIRT_PRT - [0:0]
-A PREROUTING -d 192.168.1.10/32 -j DNAT --to-destination 10.10.0.202
-A POSTROUTING -j LIBVIRT_PRT
-A POSTROUTING -s 10.231.0.1/32 -j SNAT --to-source 10.10.0.65
-A LIBVIRT_PRT -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A LIBVIRT_PRT -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
COMMIT
# Completed on Tue Nov  2 18:56:59 2021
# Generated by iptables-save v1.6.1 on Tue Nov  2 18:56:59 2021
*filter
:INPUT ACCEPT [2777810:1009315102]
:FORWARD ACCEPT [100877:5971244]
:OUTPUT ACCEPT [2293179:427715100]
:LIBVIRT_FWI - [0:0]
:LIBVIRT_FWO - [0:0]
:LIBVIRT_FWX - [0:0]
:LIBVIRT_INP - [0:0]
:LIBVIRT_OUT - [0:0]
-A INPUT -j LIBVIRT_INP
-A FORWARD -j LIBVIRT_FWX
-A FORWARD -j LIBVIRT_FWI
-A FORWARD -j LIBVIRT_FWO
-A OUTPUT -j LIBVIRT_OUT
-A LIBVIRT_FWI -d 192.168.122.0/24 -o virbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A LIBVIRT_FWI -o virbr0 -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWO -s 192.168.122.0/24 -i virbr0 -j ACCEPT
-A LIBVIRT_FWO -i virbr0 -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWX -i virbr0 -o virbr0 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p udp -m udp --dport 68 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p tcp -m tcp --dport 68 -j ACCEPT
COMMIT
# Completed on Tue Nov  2 18:56:59 2021
